added sample card for model

--- a/product/src/app/home/home.component.html
+++ b/product/src/app/home/home.component.html
@@ -1,12 +1,15 @@
 <div class="container">
-  <mat-card>
-    <mat-card-title> Welcome to Routing Demo </mat-card-title>
-    <mat-card-content>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum esse non sit
-      reprehenderit repudiandae sequi quo aspernatur officia culpa pariatur
-      architecto magni accusantium, ab error a deserunt praesentium molestias.
-      Error?
-    </mat-card-content>
-    <img mat-card-image src="../../assets/bg.png" alt="Background" />
-  </mat-card>
+  <div class="items">
+    <mat-card>
+      <mat-card-title
+        ><span>Electronic</span>
+        <button mat-icon-button>
+          <img mat-card-image src="../../assets/imac.png" alt="Background" />
+        </button>
+      </mat-card-title>
+      <mat-card-content>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+      </mat-card-content>
+    </mat-card>
+  </div>
 </div>
