--- a/product/src/app/home/home.component.scss
+++ b/product/src/app/home/home.component.scss
@@ -1,6 +1,29 @@
 .container{
     padding: 20px;
 }
+.items{
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
 mat-card{
-    width: 1200px;
+    margin: 10px;
+    width: 250px;
+    padding: 30px;
+
+    &-title{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+    & img{
+        position: absolute;
+        display: inline;
+        width: 30px;
+       -webkit-user-drag: none;
+        -khtml-user-drag: none;
+        -moz-user-drag: none;
+        -o-user-drag: none;
+        user-drag: none;
+    }
 }
