added no item found card

--- a/product/src/app/header/header.component.html
+++ b/product/src/app/header/header.component.html
@@ -22,7 +22,7 @@
       >
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Routing Demo</span>
+      <span>Product Gallery</span>
     </mat-toolbar>
     <router-outlet></router-outlet>
   </mat-sidenav-content>
