--- a/product/src/app/home/home.component.scss
+++ b/product/src/app/home/home.component.scss
@@ -25,4 +25,9 @@ mat-card{
         -moz-user-drag: none;
         -o-user-drag: none;
     }
+
+    & .add-item{
+        margin-left: 30px;
+    }
+
 }
