added method to save data

--- a/product/src/app/add-item/add-item.component.html
+++ b/product/src/app/add-item/add-item.component.html
@@ -1,21 +1,27 @@
 <div class="container">
     <mat-card>
         <mat-card-title>Add Item</mat-card-title>
-        <mat-card-content><form>
+        <mat-card-content><form [formGroup]="item" (submit)="addItem(item)">
            <mat-form-field>
-             <mat-label>Item name</mat-label>
-            <input type="text" matInput required autocomplete="off">
+            <mat-label>Item name</mat-label>
+            <input type="text" matInput required autocomplete="off" name="name" formControlName="name">
+            <mat-error class="error" *ngIf="item.controls['name'].hasError('required')">
+                Item name is required
+            </mat-error>
            </mat-form-field>
            <mat-form-field>
             <mat-label>Item Description</mat-label>
-            <textarea type="text" matInput required autocomplete="off"></textarea>
+            <textarea type="text" matInput required autocomplete="off" name="description" formControlName="description"></textarea>
+            <mat-error class="error" *ngIf="item.controls['description'].hasError('required')">
+                Item description is required
+            </mat-error>
            </mat-form-field>
-           <mat-radio-group aria-label="Select an option">
+           <mat-radio-group aria-label="Select an option" name="category" formControlName="category">
                 <span>Category </span>
                 <mat-radio-button value="imac">Electronic</mat-radio-button>
                 <mat-radio-button value="shopping">Wearable</mat-radio-button>
                 <mat-radio-button value="furniture">Household</mat-radio-button>
-                <mat-radio-button value="misc">Miscellaneous</mat-radio-button>
+                <mat-radio-button value="misc" id="misc">Miscellaneous</mat-radio-button>
             </mat-radio-group>
             <button mat-raised-button color="primary">Add Item</button>
             </form></mat-card-content>
