--- a/product/src/app/add-item/add-item.component.html
+++ b/product/src/app/add-item/add-item.component.html
@@ -23,7 +23,7 @@
                 <mat-radio-button value="furniture">Household</mat-radio-button>
                 <mat-radio-button value="misc" id="misc">Miscellaneous</mat-radio-button>
             </mat-radio-group>
-            <button mat-raised-button color="primary">Add Item</button>
+            <button mat-raised-button color="primary" [disabled]="item.invalid">Add Item</button>
             </form></mat-card-content>
     </mat-card>
 </div>
