--- a/product/src/app/home/home.component.html
+++ b/product/src/app/home/home.component.html
@@ -1,33 +1,34 @@
-<div class="container">
-  <mat-card *ngIf="products.length == 0">
-    <mat-card-title> No Items found !!</mat-card-title>
-    <mat-card-content
-      >Add your item here
-      <a
-        href="./add-item"
-        type="button"
-        mat-mini-fab
-        color="primary"
-        class="add-item"
-        ><mat-icon>add</mat-icon></a
-      ></mat-card-content
-    >
-  </mat-card>
-  <div class="items">
-    <mat-card *ngFor="let product of products">
-      <mat-card-title
-        ><span>{{ product.name }}</span>
-        <button mat-icon-button>
-          <img
-            mat-card-image
-            src="../../assets/{{ product.category }}.png"
-            alt="Background"
-          />
-        </button>
-      </mat-card-title>
-      <mat-card-content>
-        {{ product.description }}
-      </mat-card-content>
+<div class="main">
+  <div class="container">
+    <mat-card *ngIf="products.length == 0">
+      <mat-card-title> Opps !!</mat-card-title>
+      <mat-card-content>No Item found, click on the add button to add a item. </mat-card-content>
     </mat-card>
+    <div class="items">
+      <mat-card *ngFor="let product of products">
+        <mat-card-title
+          ><span>{{ product.name }}</span>
+          <button mat-icon-button>
+            <img
+              mat-card-image
+              src="../../assets/{{ product.category }}.png"
+              alt="Background"
+            />
+          </button>
+        </mat-card-title>
+        <mat-card-content>
+          {{ product.description }}
+        </mat-card-content>
+      </mat-card>
+    </div>
   </div>
+ <div class="add-item">
+   <a
+    href="./add-item"
+    type="button"
+    mat-mini-fab
+    color="primary"
+    ><mat-icon>add</mat-icon></a
+  >
+ </div>
 </div>
