added home as default path

--- a/product/src/app/home/home.component.html
+++ b/product/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <mat-card *ngIf="products.length == 0">
       <mat-card-title> Opps !!</mat-card-title>
-      <mat-card-content>No Item found, click on the add button to add a item. </mat-card-content>
+      <mat-card-content>No Item found, click on the add button to add an item.</mat-card-content>
     </mat-card>
     <div class="items">
       <mat-card *ngFor="let product of products">
