--- a/product/src/app/home/home.component.scss
+++ b/product/src/app/home/home.component.scss
@@ -1,36 +1,38 @@
-.container{
-    padding: 20px;
+.container {
+  padding: 20px;
+  width: fit-content;
+  margin: auto;
 }
-.items{
-    display: grid;
-    grid-template-columns: auto auto auto;
+.items {
+  display: grid;
+  grid-template-columns: 350px 350px 350px;
 }
-.main{
-    height: 100vh;
+.main {
+  height: 100vh;
 }
-mat-card{
-    margin: 10px;
-    width: 250px;
-    padding: 30px;
+mat-card {
+  margin: 10px;
+  width: 250px;
+  padding: 30px;
 
-    &-title{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin-bottom: 20px;
-    }
-    & img{
-        position: absolute;
-        display: inline;
-        width: 30px;
-       -webkit-user-drag: none;
-        -khtml-user-drag: none;
-        -moz-user-drag: none;
-        -o-user-drag: none;
-    }
+  &-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  & img {
+    position: absolute;
+    display: inline;
+    width: 30px;
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+  }
 }
-.add-item{
-        position: absolute;
-        bottom: 50px;
-        right: 50px;
+.add-item {
+  position: absolute;
+  bottom: 50px;
+  right: 50px;
 }
